@@ -40,7 +40,6 @@
 #include "ula.h"
 
 static int pentagon1024_reset( void );
-static int pentagon1024_shutdown( void );
 static void pentagon1024_memoryport_write( libspectrum_word port GCC_UNUSED,
 					   libspectrum_byte b);
 static void pentagon1024_v22_memoryport_write( libspectrum_word port GCC_UNUSED,
@@ -84,7 +83,7 @@ pentagon1024_init( fuse_machine_info *machine )
 
   machine->unattached_port = pentagon1024_unattached_port;
 
-  machine->shutdown = pentagon1024_shutdown;
+  machine->shutdown = NULL;
 
   machine->memory_map = pentagon1024_memory_map;
 
@@ -117,7 +116,11 @@ pentagon1024_reset(void)
   error = periph_setup( peripherals, peripherals_count );
   if( error ) return error;
   periph_setup_kempston( PERIPH_PRESENT_OPTIONAL );
+  periph_setup_beta128( PERIPH_PRESENT_ALWAYS );
   periph_update();
+
+  beta_builtin = 1;
+  beta_active = 1;
 
   machine_current->ram.last_byte2 = 0;
   machine_current->ram.special = 0;
@@ -125,19 +128,6 @@ pentagon1024_reset(void)
   /* Mark the least 896K as present/writeable */
   for( i = 16; i < 128; i++ )
     memory_map_ram[i].writable = 1;
-
-  beta_reset();
-
-  beta_available = 1;
-  beta_active = 1;
-
-  return 0;
-}
-
-static int
-pentagon1024_shutdown( void )
-{
-  beta_end();
 
   return 0;
 }
