@@ -149,7 +149,11 @@ spec128_reset( void )
   periph_setup_interface1( PERIPH_PRESENT_OPTIONAL );
   periph_setup_interface2( PERIPH_PRESENT_OPTIONAL );
   periph_setup_plusd( PERIPH_PRESENT_OPTIONAL );
+  periph_setup_beta128( PERIPH_PRESENT_OPTIONAL );
   periph_update();
+
+  periph_register_beta128();
+  beta_builtin = 0;
 
   return 0;
 }
