@@ -29,6 +29,7 @@
 
 #include <libspectrum.h>
 
+#include "disk/beta.h"
 #include "machine.h"
 #include "machines.h"
 #include "settings.h"
@@ -82,7 +83,11 @@ specplus2_reset( void )
   periph_setup_interface1( PERIPH_PRESENT_OPTIONAL );
   periph_setup_interface2( PERIPH_PRESENT_OPTIONAL );
   periph_setup_plusd( PERIPH_PRESENT_OPTIONAL );
+  periph_setup_beta128( PERIPH_PRESENT_OPTIONAL );
   periph_update();
+
+  periph_register_beta128();
+  beta_builtin = 0;
 
   return 0;
 }
