@@ -91,11 +91,17 @@ extern int periph_interface2_active;
 /* Is the +D active */
 extern int periph_plusd_active;
 
+/* Is the Beta 128 active */
+extern int periph_beta128_active;
+
 int periph_setup( const periph_t *peripherals_list, size_t n );
 void periph_setup_kempston( periph_present present );
 void periph_setup_interface1( periph_present present );
 void periph_setup_interface2( periph_present present );
 void periph_setup_plusd( periph_present present );
+void periph_setup_beta128( periph_present present );
 void periph_update( void );
+
+void periph_register_beta128( void );
 
 #endif				/* #ifndef FUSE_PERIPH_H */
