@@ -38,6 +38,7 @@ Checkbox, ZXCF up(l)oad, zxcf_upload, INPUT_KEY_l
 Checkbox, (D)ivIDE interface, divide_enabled, INPUT_KEY_d
 Checkbox, DivIDE w(r)ite protect, divide_wp, INPUT_KEY_r
 Checkbox, +D i(n)terface, plusd, INPUT_KEY_n
+Checkbox, (B)eta 128 interface, beta128, INPUT_KEY_b
 Posthook, periph_update
 
 rzx
