@@ -2368,4 +2368,8 @@
 	 distribute icons directory (Stuart).
 20071203 ui/win32/win32ui.c: implement pausing (Stuart).
 20071204 disk/plusd.c: use MEMORY_PAGE_SIZE define (Fred).
-20071204 disk/{beta.c,beta.h}: remove unused function (Stuart).
+20071204 disk/beta.[ch]: remove unused function (Stuart).
+20071204 disk/beta.[ch],machines/{pentagon.c,pentagon1024.c,pentagon512.c,
+	 scorpion.c,spec128.c,specplus2.c},periph.[ch],settings.dat,
+	 ui/options.dat,ui.c: allow the Beta 128 interface to be used with the
+	 128K and +2 machines (feature request #1541506) (Stuart).
